compiler/src/test/resources/golden/errors/dup_function.dawn
fn f() -> Int = 1

fn f() -> Int = 2
