compiler/src/test/resources/golden/errors/dup_function.err
error: function `f` is defined twice
  --> dup_function.dawn:3:4
  |
3 | fn f() -> Int = 2
  |    ^
